# Agentops

./: .actrc  .agentignore  .coverage  .coveragerc-ml  .dockerignore  .env.example  .gitignore  .gitmodules  .secrets.baseline  AGENTS.md  Agentop-System.canvas  Agentop.desktop  CLAUDE.md  Dockerfile  Makefile  PROGRESS.md  README.md  SOCIAL_MEDIA_AGENT_HANDOFF.md  app.py  content_cli.py  decode.py  docker-compose.yml  doppler.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  researcch2.md  research.md  start.sh  test_k8s_connection.py  test_k8s_tool.py  to_do_list.md  webgen_cli.py
.claude/: launch.json
.github/: COMMIT_TEMPLATE.md  copilot-instructions.md
.github/prompts/: ADDITIONS_LOG.md  agentic-engineering.prompt.md  character-creation.prompt.md  context-budget.prompt.md  copilot-delegation.prompt.md  cost-aware-llm-pipeline.prompt.md  deep-research.prompt.md  e2e-testing.prompt.md  generate-preference-pairs.prompt.md  generate-routing-data.prompt.md  generate-trajectory-data.prompt.md  higgsfield-workflow.prompt.md  python-patterns.prompt.md  security-review.prompt.md  tdd-workflow.prompt.md  verification-loop.prompt.md  website-builder.prompt.md
.github/workflows/: auto_repair.yml  ci.yml  codeql.yml  lhci-desktop.yml  lhci-mobile.yml  ml-pipeline.yml  playwright.yml  registry_parity.yml  regression_gate.yml  silent_failure_detector.yml
C:\Users\AlexS\AppData\Local\lighthouse.39313209/: Local State  SingletonCookie  SingletonLock  SingletonSocket
C:\Users\AlexS\AppData\Local\lighthouse.39313209/Default/: DIPS-wal  Favicons-journal  History-journal  Web Data
C:\Users\AlexS\AppData\Local\lighthouse.39313209/GraphiteDawnCache/: index
C:\Users\AlexS\AppData\Local\lighthouse.39313209/segmentation_platform/: ukm_db
animation_salvage_lab/07_docs/: HAILUO_AGENT_PROMPT_GUIDE.md  README.md  RESTART_PLAN.md  REVIEW_LOG.md  SORTING_GUIDE.md  cost_tracker.json  hailuo_agent_prompt_guide.json
backend/: README.md  __init__.py  auth.py  config.py  config_gateway.py  discord_bot.py  grounded_operator_answers.py  port_guard.py  scheduler.py  security_middleware.py  server.py  tasks.py
backend/a2ui/: __init__.py  bus.py  schema.py
backend/agents/: README.md  __init__.py  dep_checker.py  gatekeeper_agent.py  gsd_agent.py
backend/browser/: __init__.py  session.py  tooling.py
backend/content/: README.md  __init__.py  analytics_agent.py  avatar_video_agent.py  base_agent.py  caption_agent.py  idea_intake_agent.py  job_store.py  pipeline.py  publisher_agent.py  qa_agent.py  script_writer_agent.py  trend_researcher.py  video_job.py  voice_agent.py
backend/database/: __init__.py  customer_store.py  gsd_store.py  higgsfield_store.py
backend/gateway/: __init__.py  acl.py  audit.py  auth.py  health.py  middleware.py  ratelimit.py  secrets.py  streaming.py  usage.py
backend/knowledge/: __init__.py  context_assembler.py  llm_models.py
backend/llm/: __init__.py  profiles.py  unified_registry.py
backend/mcp/: __init__.py  (+2 more)
cli/: README.md  content_cli.py  continue_ml.py  lex_compare.py  webgen_cli.py
clients/: README.md
data/: README.md  shared_events.jsonl
deerflow/: __init__.py  setup.py
docs/: AGENT_REGISTRY.md  AGENT_SYSTEM_PROMPT.md  BROWSER_SECURITY_AUDIT.md  CHANGE_LOG.md  COSTS_OF_ARCHITECTURE.md  DRIFT_GUARD.md  FIREWALL_RULES.md  GATEKEEPER.md  GATEWAY.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_SPRINTS.md  INSPIRATIONS.md  JACK_CRAIG_METHOD.md  KNOWN_ISSUES.md  LANGUAGE_BENCHMARKS.md  LLM_ENGINEER_ROADMAP.md  MEMORY_BOUNDARY.md  ML_CHANGELOG.md  ML_EVAL_FRAMEWORK.md  ML_TRAINING_PLAN.md  ML_WEBGEN_LEARNING_BIBLE.md  NETWORK.md  NEURAL_MAP.md  OPENCLAW_ADOPTION_SPECS.md  PORTS.md  REPO_CLEAN_PLAN.md  ROUTER_RESEARCH.md  SANDBOX_LOG.md  SANDBOX_SETUP.md  SECURITY_AUDIT.md  SOCIAL_MEDIA_PLATFORM_RULES.md  SOURCE_OF_TRUTH.md  TDD_GUIDE.md  TOOL_ID_PATTERNS.md  TURBO_QUANT_ROADMAP.md  aeo-future-plan.md  ai-visual-code.md  code-citations.md  pixel-agents.md  robloxidea.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
launch/: Agentop.bat  Agentop.desktop  README.md  start.sh
lib/localllm/: README.md  __init__.py  client.py  cloud_client.py  models.py  pyproject.toml  router.py
mcp-gateway/: config.yaml  docker-mcp.yaml  registry.yaml
ml-lab-viewer/: next.config.mjs  package-lock.json  package.json
reports/: benchmark_20260401_052318.json  benchmark_20260401_052728.json  benchmark_20260401_055013.json  expanded_eval_lex-v2_20260401_055209.json  growth_report.json  lex_router_eval_lex-v2_20260401_085412.json  lex_router_eval_lex-v2_20260401_085517.json  lex_router_eval_lex-v2_20260401_103220.json  lex_router_eval_lex_20260401_070403.json  lex_router_eval_llama3.2_20260401_070438.json  lex_router_eval_mistral:7b_20260401_090359.json  lex_router_eval_qwen2.5-coder:7b_20260401_090323.json  runtime_inventory.json
rust/turbo_quant/: Cargo.toml  pyproject.toml
rust/turbo_quant/benches/: quantize_bench.rs
rust/turbo_quant/src/: lib.rs  python.rs
sandbox/: Dockerfile  README.md  __init__.py  build.sh  session_manager.py
scripts/: README.md  agentop_aliases.sh  analyze_git_growth.py  auto_repair.py  bench_turbo_quant_python.py  benchmark_models.py  build_architecture_pairs.py  build_dpo_pairs.py  build_git_pairs.py  build_personal_pairs.py  build_pytest_pairs.py  build_review_pairs.py  build_router_pairs.py  build_spec_pairs.py  build_tool_selection_pairs.py  check_costs.sh  ci-local.sh  ci-mock-backend.js  classify_failures.py  compose_final.sh  dataset_stats.py  encrypt_env.py  eval_expanded.py  eval_lex.py  eval_lex_router.py  eval_model.py  export_webgen_gguf.sh  fetch_openrouter_models.py  filter_sft_by_ux.py  filter_training_data.py  finetune_lex.py  finetune_webgen.py  fix_asyncmock.py  fix_datetime_deprecated.py  fix_knowledge_rebuild.py  fix_kvs_imports.py  frame_gen.py  generate_release_evidence.py  generate_runtime_inventory.py  generate_training_data.py  (+41 more)
src-tauri/: tauri.conf.json
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
(+950 files in other folders)
