[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentop"
version = "1.0.0"
description = "Local-first multi-agent control center with drift governance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "qrcode[pil]>=8.0",
    "cryptography>=43.0.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-x --tb=short -q --cov=backend --cov=deerflow --cov-report=term-missing"
testpaths = ["backend/tests", "deerflow/tests"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "backend/__pycache__/*",
    # Integration-only: requires live external services (Ollama, APIs, Playwright)
    "backend/mcp/higgsfield_playwright_server.py",
    "backend/port_guard.py",
    "backend/gateway/adapters/anthropic.py",
    "backend/gateway/adapters/openrouter.py",
    "backend/gateway/adapters/openai.py",
    "backend/gateway/adapters/ollama.py",
    # Animation cost logger: writes to hardcoded paths in animation_salvage_lab/
    "backend/utils/cost_logger.py",
]

[tool.coverage.report]
show_missing = true

