[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "deerflow*", "lib*"]

[project]
name = "agentop"
version = "1.0.0"
description = "Local-first multi-agent control center with drift governance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "qrcode[pil]>=8.0",
    "cryptography>=43.0.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "playwright>=1.40.0",
    "anthropic>=0.87.0",
    "pypdf>=4.0.0",
    "numpy>=1.26.0",
    "google-api-python-client>=2.120.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "scripts/",
    "clients/",
    "sandbox/",
    "lib/",
    "pixel-agents/",
    "animation_salvage_lab/",
    "SigmaSimulator/",
    "seagullmedterwebsite/",
    "output/",
    "data/",
    "mcp-gateway/",
    "vscode-extension/",
    "reports/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"backend/gateway/__init__.py" = ["E402", "F401"]
"backend/gateway/middleware.py" = ["E402"]
"backend/gateway/streaming.py" = ["E402"]
"deerflow/tests/__init__.py" = ["E402", "F401", "N814"]
"deerflow/tests/test_deerflow.py" = ["E402"]
"backend/middleware/__init__.py" = ["F401"]
"backend/mcp/higgsfield_playwright_server.py" = ["E741"]
"backend/content/voice_agent.py" = ["N811"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false
exclude = ["^lib/"]

[[tool.mypy.overrides]]
module = "lib.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "backend.tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "deerflow.tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short -q --cov=backend --cov=deerflow --cov-report=term-missing --cov-report=html:htmlcov"
testpaths = ["backend/tests", "deerflow/tests"]
markers = [
    "ml: ML subsystem — eval framework, scoring, pipeline, experiments",
    "gateway: API gateway — auth, ACL, secrets, rate-limiting",
    "sandbox: Docker sandbox isolation and execution routing",
    "agents: Agent orchestration — GSD, Gatekeeper, agent-to-agent",
    "tools: Native tool implementations and tool ID registry",
    "skills: Skill registry, manifest loading, skill CRUD",
    "webgen: Website generation pipeline and enforcement",
    "browser: Browser automation, Playwright, CDP",
    "mcp: MCP Docker bridge and tool routing",
    "middleware: Drift Guard governance middleware",
    "memory: MemoryStore namespaced persistence",
    "models: Pydantic model validation",
    "deerflow: DeerFlow delegation, execution, middleware",
    "integration: Multi-component integration tests",
    "unit: Pure unit tests with full mocking",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "backend/__pycache__/*",
    # Integration-only: requires live external services (Ollama, APIs, Playwright)
    "backend/mcp/higgsfield_playwright_server.py",
    "backend/port_guard.py",
    "backend/gateway/adapters/anthropic.py",
    "backend/gateway/adapters/openrouter.py",
    "backend/gateway/adapters/openai.py",
    "backend/gateway/adapters/ollama.py",
    # Animation cost logger: writes to hardcoded paths in animation_salvage_lab/
    "backend/utils/cost_logger.py",
]

[tool.coverage.report]
show_missing = true

