[package]
name = "turbo_quant"
version = "0.1.0"
edition = "2021"
description = "TurboQuant: Random rotation + scalar quantization for embedding compression (Rust port)"
license = "MIT"

[lib]
name = "turbo_quant"
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_chacha = "0.3"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[features]
default = []
python = ["pyo3"]

[[bench]]
name = "quantize_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
